clang/test/BSC/Negative/Ownership/Owned/owned_struct/owned_struct_c.h
struct A {
    _Owned int a;  // expected-error {{unknown type name '_Owned'}}
    _Owned int* b; // expected-error {{unknown type name '_Owned'}}
};
